# common-protocol

./: .gitattributes  CMakeLists.txt  README.md
command/: command_type.hpp  set_control_flag.hpp  set_valve_position.hpp
devices/ematch/: ematch_info.hpp
devices/heater/: heater_info.hpp
devices/solenoid/: solenoid_info.hpp
devices/valve/: valve_info.hpp  valve_status.hpp
framing/: can_header.hpp  ethernet_header.hpp  payload_type.hpp
peripherals/adc/: adc_info.hpp
peripherals/can/: can_info.hpp
peripherals/ethernet/: ethernet_info.hpp
peripherals/power_monitor/: power_monitor_info.hpp  power_monitor_state.hpp  power_monitor_status.hpp
peripherals/storage/: sd_write_engine_info.hpp  storage_info.hpp  storage_status.hpp
peripherals/thermocouple/: thermocouple_info.hpp  thermocouple_state.hpp  thermocouple_status.hpp
response/: response_type.hpp
system/: board_id.hpp  state.hpp
system/valves/: ecu.hpp  fcu.hpp
telemetry/: ecu_extended_system_state.hpp  ecu_system_state.hpp  extended_system_state_base.hpp  fcu_extended_system_state.hpp  fcu_system_state.hpp  gs_system_state.hpp  refused_command_info.hpp  sd_block_footer.hpp  system_state_base.hpp  telemetry_type.hpp
